# Compare-Agent

./: .cursorignore  .gitignore  QUICKSTART.md  README.md  config.py  main.py  package-lock.json  pyproject.toml
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/how-it-works/: page.tsx
app/search/: page.tsx
app/terms/: page.tsx
backend/: infrastructure.py  logging_config.py
backend/agent/: orchestrator.py  prompts.py  steps.py
backend/api/: brave_client.py  glm_client.py  grok_client.py  routes.py  sonar_client.py  tavily_client.py
backend/cache/: redis_cache.py
backend/infrastructure/: __init__.py  __main__.py  app.py  auth.py  bootstrap.py  endpoints.py  middleware.py  websocket_progress.py
backend/models/: schemas.py
frontend/: README.md  next.config.js  package.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: AboutPage.tsx  ErrorDisplay.tsx  FilterSidebar.tsx  Footer.module.css  Footer.tsx  Header.module.css  Header.tsx  HeroSection.module.css  HeroSection.tsx  LoadingStep.tsx  ProductCard.tsx  ProductGrid.tsx  SearchLoadingState.tsx  SearchProductCard.module.css  SearchProductCard.tsx  SearchResultsPage.tsx  TermsOfServicePage.tsx
frontend/src/components/figma/: ImageWithFallback.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: design-system.css
src/: App.tsx  index.css
src/components/: Header.tsx  HowItWorksPage.tsx  LinkPopup.tsx  ProductCard.tsx  ProductGrid.tsx  SearchLoadingState.tsx  TrustSection.tsx
src/styles/: globals.css
