## Stub pyproject configuration for the product comparison agent backend.
[project]
name = "product-comparison-agent"
version = "0.1.0"
description = "Agentic backend for scalable product comparison workflows."
authors = [{ name = "Your Team" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "redis>=5.0.0",
    "structlog>=24.1.0",
    "tenacity>=9.0.0",
    "uvicorn[standard]>=0.30.0",
    "apscheduler>=3.10.4",
    "prometheus-client>=0.20.0",
    "requests>=2.32.0",
    "fuzzywuzzy[speedup]>=0.18.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "anyio>=4.3.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0"
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
